Fix alignment

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -252,6 +252,11 @@
     color: $studio-simplenote-blue-30;
   }
 
+  .tag-field {
+    height: 56px;
+    padding: 7px;
+  }
+
   .tag-field input {
     background: transparent;
 
